--- a/lab12.html
+++ b/lab12.html
@@ -102,6 +102,21 @@
                             </a>    
                         </div> 
                         <br>
+                        <div class="list-group">
+                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Acknowledgements</h5>
+                            </div>
+                              <p class="mb-1">I worked on this final lab with <a href="https://zinyamintun.github.io/zyt2-lab.github.io-FastRobots-2023-/">Zin Tun</a>. During the last few labs,
+                                  her robot has sometimes had trouble with connecting via BLE. In Lab 12, both my laptop and her laptop were unable to connect to the Artemis board onboard
+                                  her robot; after attempting many methods to try and debug this issue and consulting many TAs during open lab hours, we decided to combine our efforts onto
+                                  my robot for Lab 12. Thus, Zin and I worked together to incrementally build and test our Lab 12 code. Our process was to work on each state one at a time,
+                                  adding a new state whenever the previous states had been tuned sufficiently. Even though the battery problem caused some inconsistency with our results,
+                                  we were able to have a few good runs in the end to complete our final lab. 
+                            </p>    
+                            </a>    
+                        </div> 
+                        <br>
                         <p> Thank you to all the TAs for making this class as intriguing and fun as it was rigorous. I was able to explore a variety of topics in robotics,
                             and I am excited to continue following my passion for robotics into the future. I am especially thankful for my Wednesday lab TAs, Anya and Jonathan,
                             who patiently explained confusing concepts to me, were very willing to spend time to help me debug my robot, and were overall the most supportive and kind TAs I have had <3
