--- a/lab12.html
+++ b/lab12.html
@@ -107,10 +107,8 @@
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Acknowledgements</h5>
                             </div>
-                              <p class="mb-1">I worked on this final lab with <a href="https://zinyamintun.github.io/zyt2-lab.github.io-FastRobots-2023-/">Zin Tun</a>. 
-                              </p> 
-                              <img src="assets/img/zin_photo.jpg" alt="Me and Zin" width=30% height=auto/>
-                              <p class="mb-1"> During the last few labs,
+                              <p class="mb-1">I worked on this final lab with Zin Tun. 
+                              <img src="assets/img/zin_photo.jpg" alt="Me and Zin" width=30% height=auto/> During the last few labs,
                                   her robot has sometimes had trouble with connecting via BLE. In Lab 12, both my laptop and her laptop were unable to connect to the Artemis board onboard
                                   her robot; after attempting many methods to try and debug this issue and consulting many TAs during open lab hours, we decided to combine our efforts onto
                                   my robot for Lab 12. Thus, Zin and I worked together to incrementally build and test our Lab 12 code. Our process was to work on each state one at a time,
